--- a/filter.ipynb
+++ b/filter.ipynb
@@ -4,40 +4,18 @@
    "cell_type": "code",
    "execution_count": 216,
    "id": "6a6c1f43",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "from proto_tools.codec.tracking import TrackedPeople, TrackedPerson\n",
-    "import logging\n",
-    "import argparse\n",
-    "import typing\n",
-    "logging.getLogger(\"py4j\").setLevel(logging.ERROR)\n",
-    "import json\n",
-    "import re\n",
-    "from proto_tools.codec.tracking import TrackedPeople, TrackedPerson\n",
     "import os\n",
-    "import pickle as pk\n",
-    "import bson\n",
-    "import numpy as np\n",
-    "from google.protobuf.json_format import MessageToDict\n",
-    "from typing import List\n",
-    "\n",
-    "\n",
-    "from pandas import DataFrame\n",
-    "from dataclasses import dataclass\n",
-    "import os\n",
-    "import requests\n",
-    "import json\n",
-    "import re\n",
     "from record_dataloader import build_loader\n",
     "from proto_tools.codec.tracking import TrackedPeople\n",
     "from tqdm import tqdm\n",
     "import pandas as pd\n",
-    "import requests\n",
-    "from requests.adapters import HTTPAdapter\n",
-    "from requests.packages.urllib3.util.retry import Retry\n",
-    "import json\n",
     "import math\n",
     "import numpy as np\n",
     "def calc_speed(person_x,person_y):\n",
